--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
                <p><span class="year">2019</span></p>
                <ol>
                   <li>
+                     <b>Van Quan Nguyen</b>, Jinsul Kim, “SYSTEM FOR DETECTING EVENT USING USER EMOTION ANALYSIS AND METHOD THEREOF(사용자 감정 분석을 이용한 이벤트 탐지 시스템 및 방법)", <i> Korean Patent</i>.
+                     <br />
+                     <a href="awards/1020180123883.pdf" target="_blank">PDF</a>&nbsp; &nbsp; <a href="awards/APP2018-0435KR_전남대학교_특허등록증.pdf" target="_blank">Certificate</a>&nbsp; &nbsp;<a target="_blank" href="http://engpat.kipris.or.kr/engpat/searchLogina.do?next=MainSearch#page1">View</a> 
+                  </li>
+                  <li>
+                        <b>Van Quan Nguyen</b>, Jinsul Kim, “APPARATUS AND METHOD FOR RECOGNIZING EMOTION USING PHOTOPLETHYSMOGRAM SYNCHRONIZED IN A DIFFERENT LOCATION AND PHONOCARDIOGRAM (다른 위치에서 동기화된 PPG와 PCG를 사용한 감정 인식 장치 및 방법)", <i> Korean Patent</i>.
+                        <br />
+                        <a href="awards/1020180124678.pdf" target="_blank">PDF</a>&nbsp; &nbsp; <a href="awards/APP2018-0434KR_전남대학교_특허등록증.pdf" target="_blank">Certificate</a>&nbsp; &nbsp;<a target="_blank" href="http://engpat.kipris.or.kr/engpat/searchLogina.do?next=MainSearch#page1">View</a> 
+                     </li>
+                  <li>
                      <b>Van Quan Nguyen</b>, Tien Nguyen Anh, Hyung-Jeong Yang, “Real-time event detection using recurrent neural network in social sensors", <i> International Journal of Distributed Sensor Network</i>.
                      <br />
                      <a href="pdf/2019.05.12_DSN_Real-time event detection using recurrent neural network in social sensors.pdf" target="_blank">PDF</a>&nbsp; &nbsp;<a target="_blank" href="https://journals.sagepub.com/doi/10.1177/1550147719856492">View</a> 
@@ -160,24 +170,41 @@
                      <th>Period</th>
                      <th>Title</th>
                      <th>Fund Support</th>
+                     <th>Document</th>
                      <th>Status</th>
                   </tr>
                   <tr>
-                     <td>2019.03.01 ~ current</td>
-                     <td>Deep Learning Project- Alarm predict</td>
+                     <td>2020.03.01 ~ current</td>
+                     <td>Big Watcher Project</td>
                      <td><a href="http://www.xisom.com/en-us/php/home.php">XISOM</a>, Republic of Korea</td>
-                     <td>In Progress</td>
+                     <td>
+                        <a href="doc/DocumentSheet.pdf" target="_blank">ToolsSheet</a>
+                        <a href="doc/OPCReport200529_2.pdf" target="_blank">Architecture</a>
+                        <a href="https://www.youtube.com/watch?v=fXQVBeppmno" target="_blank">Demo</a>
+                     </td>
+                     <td>Completed</td>
                   </tr>
                   <tr>
-                     <td>2018.09.10 ~ current</td>
+                     <td>2019.03.01 ~ 2020.03.01</td>
+                     <td>Deep Learning Library for .Net framwork</td>
+                     <td><a href="http://www.xisom.com/en-us/php/home.php">XISOM</a>, Republic of Korea</td>
+                     <td>
+                        <a href="doc/PreparingDataandFeatureEngineering20191213.pdf">Architecture</a>
+                     </td>
+                     <td>Completed</td>
+                  </tr>
+                  <tr>
+                     <td>2018.09.10 ~ 2019.03.01</td>
                      <td>Optical Character Recognition</td>
                      <td><a href="http://www.xisom.com/en-us/php/home.php">XISOM</a>, Republic of Korea</td>
-                     <td>In Progress</td>
+                     <td></td>
+                     <td>Completed</td>
                   </tr>
                   <tr>
                      <td>2017.07.20 ~ 2018.08.30</td>
                      <td>Big Data-based SCADA Data Analysis and Intelligent Failure Prediction System Performance Optimization Study <br>빅 데이터 기반의 SCADA 데이터 분석 및 지능형 장애예측 시스템 성능 최적화 연구</td>
                      <td><a href="http://www.xisom.com/en-us/php/home.php">XISOM</a>, Republic of Korea</td>
+                     <td></td>
                      <td>Completed</td>
                   </tr>
                   <tr>
@@ -187,6 +214,7 @@
                         네트워크 성능분석을 이용한 고용량 멀티미디어 전송 및 멀티유저간의 공유를 위한 데이터 품질향상 기술 연구
                      </td>
                      <td><a href="https://www.etri.re.kr/eng/main/main.etri">ETRI</a>, Republic of Korea</td>
+                     <td></td>
                      <td>Completed</td>
                   </tr>
                </table>
