- Edit status of BigWatcher project

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <a href="doc/OPCReport200529_2.pdf" target="_blank">Architecture</a>
                         <a href="https://www.youtube.com/watch?v=fXQVBeppmno" target="_blank">Demo</a>
                      </td>
-                     <td>Completed</td>
+                     <td>In progress</td>
                   </tr>
                   <tr>
                      <td>2019.03.01 ~ 2020.03.01</td>
